Fixing mobile alignment of case studies
Fixing mobile alignment of case studies

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -409,7 +409,7 @@ p {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 1rem;
-    grid-template-rows: 2rem, repeat(6, max-content);
+    grid-template-rows: 1rem max-content 1rem max-content max-content max-content max-content max-content max-content max-content;
     row-gap: 1rem;
   }
 
@@ -445,39 +445,39 @@ p {
 
   .Work {
     grid-column: 1 / 2;
-    grid-row: 1;
+    grid-row: 2;
     justify-self: start;
     align-self: center;
   }
 
   .work-mi {
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 4;
   }
 
   .work-kpap {
     grid-column: 1 / 3;
-    grid-row: 3;
+    grid-row: 5;
   }
 
   .work-solcom {
     grid-column: 1 / 3;
-    grid-row: 4;
+    grid-row: 6;
   }
 
   .work-burnandearn {
     grid-column: 1 / 3;
-    grid-row: 5;
+    grid-row: 7;
   }
 
   .work-marketme {
     grid-column: 1 / 3;
-    grid-row: 6;
+    grid-row: 8;
   }
 
   .work-uplift {
     grid-column: 1 / 3;
-    grid-row: 7;
+    grid-row: 9;
   }
 
   .section-about {
